--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div style="width: 100%; height: 50px;">
         <input id="btnToInside" type="button" class="tabBtn" style="width: 50%; height: 100%; font-size: 30px;" value="国内" disabled="disabled"><input id="btnToOutside" type="button" class="tabBtn" style="width: 50%; height: 100%; font-size: 30px" value="国外">
     </div>
-    <!-- <div style="width: 100%; height: 50px;">
-        <input id="btn3MonthData" type="button" class="tabBtn" style="width: 50%; height: 100%; font-size: 30px" value="近三月" disabled="disabled"><input id="btnAllData" type="button" class="tabBtn" style="width: 50%; height: 100%; font-size: 30px;" value="全体数据">
-    </div> -->
+    <div style="width: 100%; height: 50px;">
+        <input id="btn3MonthData" type="button" class="tabBtn" style="width: 50%; height: 100%; font-size: 30px" value="近三月" ><input id="btnAllData" type="button" class="tabBtn" style="width: 50%; height: 100%; font-size: 30px;" value="全体数据" disabled="disabled">
+    </div>
     <div id="mainMap" style="width: 100%; height: 800px; top: 0px;"></div>
     <div style="width: 100%; height: 600px; top: 0px;">
         <canvas id="graph1"></canvas>
